# NLP_Final_Exam

./: .env.example  .gitignore  PLAN.md  README.md  main.py  pre-req.txt  pyproject.toml
.streamlit/: config.toml
dashboard/: README.md  app.py
data/: corpus.csv
data/chroma/: chroma.sqlite3
data/raw/: all_raw.json  community.json  finance.json  news.json  research.json
model_server/: README.md  requirements.txt  server.py  test_server.py
results/: ceo_briefing.txt  dashboard_data.json  intelligence.json  metrics.json  recommendations.json  trace.json
src/: __init__.py  agent.py  ceo_agent.py  classical_agent.py  collector.py  config.py  intelligence_engine.py  knowledge_base.py  orchestrator.py  preprocess.py  retriever_hybrid.py  tools.py  utils.py  verifier_agent.py
