[project]
name = "ai-ceo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "feedparser>=6.0.12",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.5",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.14",
    "torch>=2.12.0",
    "transformers>=5.12.1",
]
